work on optimizing count, its commented out for now